--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SIT KARO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
@@ -51,13 +51,13 @@
     <section>
         <div class="container-fluid bg-light">
             <div class="row p-5 ">
-                <div class="col-lg-6 mt-5">
+                <div class="col-lg-7 mt-5">
                     <p class="header">your getway to <br> alternative <br>investments</p>
                     <p class="info"> take control with all in one investment requirement, <br> checking and more </p>
                     <button class="btn">get started</button>
                 </div>
-                <div class="col-lg-6">
-                    <img src="images/mobile.png" height="500" width="600" alt="">
+                <div class="col-lg-5">
+                    <img src="images/mobile.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -126,21 +126,21 @@
                    <button class="btn">get started</button>
                 </div>
                <div class="col-lg-6">
-                   <img src="images/aboutus.png" height="500" width="600" alt="">
+                   <img src="images/aboutus.png" class="img-fluid" alt="">
                </div>
             </div>
         </div>
       </section>
       <section>
        <div class="container-fluid bg-light">
-           <div class="row p-5">
+           <div class="row">
                <div class="col-lg-6">
-                   <img src="images/mobile 2.png" height="500" width="600" alt="">
+                <img src="images/mobile 2.png" class="img-thumbnail bg-light border-0" alt="...">
                </div>
-               <div class="col-lg-6 mt-5">
+               <div class="col-lg-6 mt-5 py-5">
                    <p class="header">Earn Found Money.</p >
                    <p class="info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum temporibus fuga enim excepturi, quasi quaerat!</p>
-                   <button class="btn">get started</button>
+                   <button class="btn mx-5">GET STARTED</button>
                 </div>
             </div>
         </div>
@@ -162,6 +162,6 @@
          </div>
        </div>
      </section>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
